--- a/jenkinsfile
+++ b/jenkinsfile
@@ -10,13 +10,13 @@ pipeline {
         stage('Build') {
             steps {
                 // Get some code from a GitHub repository
-                git 'https://github.com/capgteam/bankapplicationrepo.git'
+                git 'https://github.com/vaishnavi09a/bankrepo.git'
 
                 // Run Maven on a Unix agent.
                 //sh "mvn -Dmaven.test.failure.ignore=true clean package"
 
                 // To run Maven on a Windows agent, use
-                 bat "mvn -f Day1-BankApp/pom.xml -Dmaven.test.failure.ignore=true clean package"
+                 bat "mvn -f pom.xml -Dmaven.test.failure.ignore=true clean package"
             }
 
             post {
@@ -24,13 +24,13 @@ pipeline {
                 // failed, record the test results and archive the jar file.
                 success {
                     junit '**/target/surefire-reports/TEST-*.xml'
-                    archiveArtifacts 'Day1-BankApp/target/*.jar'
+                    archiveArtifacts 'target/*.jar'
                 }
             }
         }
          stage('test'){
             steps{
-                bat "mvn -f Day1-BankApp/pom.xml test"
+                bat "mvn -f pom.xml test"
             }
         }
         stage('acceptance'){
@@ -41,7 +41,7 @@ pipeline {
         stage('deploy'){
             steps{
                 echo "Deploy into tomcat"
-                build 'deploy-war-from-jenkins-to-tomcat'
+                build 'deploywar from jenkins to tomcat'
             }
         }
     }
